--- a/dni.html
+++ b/dni.html
@@ -10,7 +10,10 @@
 <body id="cuerpo">
     <label for="dni">Introduzca SU DNI</label>
     <input name="dni" id="dni" type="number">
-    <input type="button" value="CALCULAR" onclick="calcularLetraDni()"><br>
+    <!--<input type="button" value="CALCULAR" onclick="calcularLetraDni()"><br>
+    <label for="letra">Introduzca su letra</label>
+    <input name="letra" id="letra" type="string">-->
+    <input type="button" value="validar" onclick="validarDni()"><br>
     <input type="radio" checked id="sin" name="prefijo" value="0">
     <label for="sin">Sin letra</label><br>
     <input type="radio" id="x" name="prefijo" value="0">
